# stm32-eth

./: .gdbinit  Cargo.toml  mesytest.py  test-repro.py
.cargo/: config
examples/: repro.rs  udp.rs
src/: setup.rs  smoltcp_phy.rs
